fixed experience dropdown being cut off from the new search bar implementation

--- a/frontend/src/components/css/Browse/searchBar.css
+++ b/frontend/src/components/css/Browse/searchBar.css
@@ -87,9 +87,10 @@
   height: 100%;
   width: 8rem;
   line-height: 3rem;
-  background-color: white;
+  background-color: #ececec;
   text-align: center;
   color: #0b081c;
+  border-radius: 0 30px 30px 0;
 }
 
 .search-bar {
@@ -105,7 +106,6 @@
   font-family: Montserrat;
   border: 1px solid #ececec;
   border-radius: 30px;
-  overflow: hidden;
 }
 
 .mobile-search-bar {
